package com.planfy.backend.model;

public enum Rol {

	USER,ADMIN
}
