package com.planfy.backend.security;

import io.jsonwebtoken.*;
import io.jsonwebtoken.security.Keys;
import org.springframework.stereotype.Service;

import java.security.Key;
import java.util.Date;
import java.util.function.Function;

@Service
public class JwtService {

	private static final String SECRET_KEY = "12345678901234567890123456789012";
	
	private Key getKey() {
		return Keys.hmacShaKeyFor(SECRET_KEY.getBytes()); 
	}
	
	public String generateToken(String username) {
		return createToken(username, 1000 * 60 * 15);
	}
	
	public String generateRefreshToken(String username) {
		return createToken(username, 1000 * 60 * 60 * 24 * 7);
	}
	
	private String createToken(String username, long expiration) {
		return Jwts.builder()
				.setSubject(username)
				.setIssuedAt(new Date())
				.setExpiration(new Date(System.currentTimeMillis()+ expiration))
				.signWith(getKey(),SignatureAlgorithm.HS256)
				.compact();
	}
	
	public String extractUsername(String token) {
		return extractClaim(token,Claims::getSubject);
	}
	
	public <T> T extractClaim(String token, Function<Claims, T> resolver) {
        Claims claims = Jwts.parserBuilder()
                .setSigningKey(getKey())
                .build()
                .parseClaimsJws(token)
                .getBody();
        return resolver.apply(claims);
    }
	
	public boolean isTokenValid(String token, String username) {
        return extractUsername(token).equals(username) && !isExpired(token);
    }

    private boolean isExpired(String token) {
        return extractClaim(token, Claims::getExpiration).before(new Date());
    }
}
